force-app/main/default/objects/Fulfillment__c/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <description>OrderProductLine__r.kugo2p__ListPrice__c</description>
    <formula>Boom_Order_Product_Line__r.ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>