force-app/main/default/objects/Fulfillment__c/fields/Has_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has contacts assigned to this product in EE</description>
    <inlineHelpText>Has contacts assigned to this product in EE</inlineHelpText>
    <label>Has Contact List</label>
    <type>Checkbox</type>
</CustomField>