force-app/main/default/objects/Fulfillment__c/fields/Has_Testimonial_Logo__c.field-meta.xml
<CustomField>
    <fullName>Has_Testimonial_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Testimonial Logo</label>
    <type>Checkbox</type>
</CustomField>