force-app/main/default/objects/Fulfillment__c/fields/Has_Testimonial_Photo__c.field-meta.xml
<CustomField>
    <fullName>Has_Testimonial_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Testimonial Photo</label>
    <type>Checkbox</type>
</CustomField>