force-app/main/default/objects/Fulfillment__c/fields/Hashtags__c.field-meta.xml
<CustomField>
    <fullName>Hashtags__c</fullName>
    <inlineHelpText>Personal Hashtags for Managed Social and Testimonials</inlineHelpText>
    <label>Hashtags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>