force-app/main/default/objects/Fulfillment__c/fields/Heat_Index_Live__c.field-meta.xml
<CustomField>
    <fullName>Heat_Index_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by webapp, action added via patch by Lee, on the go live date of the market, used to fire auto email</description>
    <inlineHelpText>Should be checked automatically on the go live date for listings</inlineHelpText>
    <label>Heat Index Live</label>
    <type>Checkbox</type>
</CustomField>