force-app/main/default/objects/Fulfillment__c/fields/Inscription_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_1__c</fullName>
    <formula>OrderProductLine__r.Inscription_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inscription Line 1 RETIRED</label>
    <type>Text</type>
</CustomField>