force-app/main/default/objects/Fulfillment__c/fields/Inscription_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_3__c</fullName>
    <formula>Boom_Order_Product_Line__r.Inscription_Line_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inscription Line 3 RETIRED</label>
    <type>Text</type>
</CustomField>