force-app/main/default/objects/Fulfillment__c/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <description>This field is used to record the # of digital ad campaign interactions.</description>
    <label>Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>