force-app/main/default/objects/Fulfillment__c/fields/Is_Subscription_Addon__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription_Addon__c</fullName>
    <formula>Boom_Order_Product_Line__r.Product__r.Is_Subscription_Addon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Subscription Add On</label>
    <type>Checkbox</type>
</CustomField>