force-app/main/default/objects/Fulfillment__c/fields/Kugamon_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Kugamon_Order_Id__c</fullName>
    <label>Kugamon Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>