force-app/main/default/objects/Fulfillment__c/fields/Last_Testimonial_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Testimonial_Date__c</fullName>
    <description>Date of most recent testimonial post</description>
    <inlineHelpText>Date of most recent testimonial post</inlineHelpText>
    <label>Last Testimonial Date</label>
    <summarizedField>Testimonial__c.Publish_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Testimonial__c.Status__c</field>
        <operation>equals</operation>
        <value>Ready to Publish, Published</value>
    </summaryFilterItems>
    <summaryForeignKey>Testimonial__c.Fulfillment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>