force-app/main/default/objects/Fulfillment__c/fields/Legacy_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Order_Id__c</fullName>
    <formula>IF(ISNULL(Boom_Order__c), &quot;&quot;, Boom_Order__r.Legacy_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Order Id</label>
    <type>Text</type>
</CustomField>