force-app/main/default/objects/Fulfillment__c/fields/Legacy_Product_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Line_Id__c</fullName>
    <formula>IF(ISNULL(Boom_Order_Product_Line__c), &quot;&quot;,   Boom_Order_Product_Line__r.Legacy_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Product Line Id</label>
    <type>Text</type>
</CustomField>