force-app/main/default/objects/Fulfillment__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <formula>PrimaryRecipient__r.License__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License</label>
    <type>Text</type>
</CustomField>