force-app/main/default/objects/Fulfillment__c/fields/Line_1__c.field-meta.xml
<CustomField>
    <fullName>Line_1__c</fullName>
    <description>New field to capture line 1 of wall plaque and desk award inscriptions from SGIZMO.</description>
    <label>Line 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>