force-app/main/default/objects/Fulfillment__c/fields/Line_4__c.field-meta.xml
<CustomField>
    <fullName>Line_4__c</fullName>
    <description>New field to capture line 4 of wall plaque and desk award inscriptions from SGIZMO.</description>
    <label>Line 4</label>
    <length>250</length>
    <type>Text</type>
</CustomField>