force-app/main/default/objects/Fulfillment__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <formula>Boom_Order_Product_Line__r.LineDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>