force-app/main/default/objects/Fulfillment__c/fields/List_Retrieval_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Retrieval_Date__c</fullName>
    <label>List Retrieval Date</label>
    <type>Date</type>
</CustomField>