force-app/main/default/objects/Fulfillment__c/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <description>Expected contact list source (from sales presentation)</description>
    <inlineHelpText>Expected contact list source (from sales presentation)</inlineHelpText>
    <label>List Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>