force-app/main/default/objects/Fulfillment__c/fields/List_Source_Other__c.field-meta.xml
<CustomField>
    <fullName>List_Source_Other__c</fullName>
    <label>List Source Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>