force-app/main/default/objects/Fulfillment__c/fields/Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Code__c</fullName>
    <formula>PrimaryRecipient__r.Login_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login Code</label>
    <type>Text</type>
</CustomField>