force-app/main/default/objects/Fulfillment__c/fields/Mail_Service_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Mail_Service_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created at Teresa&apos;s request in ticket 3431</description>
    <label>Mail Service Purchased</label>
    <type>Checkbox</type>
</CustomField>