force-app/main/default/objects/Fulfillment__c/fields/Mailing_Style__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Style__c</fullName>
    <description>How to handle the mailing of a product (Used for Essential Living, now)</description>
    <inlineHelpText>How to handle the mailing of a product (Used for Essential Living, now)</inlineHelpText>
    <label>Mailing Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail - Flexmail</fullName>
            </value>
            <value>
                <fullName>Direct to Client - Print Only</fullName>
            </value>
            <value>
                <fullName>Direct to Client - Pre Stamped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>