force-app/main/default/objects/Fulfillment__c/fields/Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Code__c</fullName>
    <formula>Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Code</label>
    <type>Text</type>
</CustomField>