force-app/main/default/objects/Fulfillment__c/fields/Market_Final_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Final_Upload_Date__c</fullName>
    <formula>Market__r.New_Final_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Final Upload Date</label>
    <type>Date</type>
</CustomField>