force-app/main/default/objects/Fulfillment__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <formula>Boom_Order__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Project</label>
    <type>Text</type>
</CustomField>