force-app/main/default/objects/Fulfillment__c/fields/Notes_for_Ad_Prod__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Ad_Prod__c</fullName>
    <formula>Boom_Order__r.Notes_for_Ad_Prod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes for Ad Prod</label>
    <type>Text</type>
</CustomField>