force-app/main/default/objects/Fulfillment__c/fields/Number_Testimonial_Posts__c.field-meta.xml
<CustomField>
    <fullName>Number_Testimonial_Posts__c</fullName>
    <description># testimonial posts created (Not number posted to social media)</description>
    <inlineHelpText># testimonial posts created (Not number posted to social media)</inlineHelpText>
    <label># Testimonial Posts</label>
    <summaryForeignKey>Testimonial__c.Fulfillment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>