force-app/main/default/objects/Fulfillment__c/fields/Official_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Official_Order_Date__c</fullName>
    <formula>Boom_Order__r.Released__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Official Order Date</label>
    <type>DateTime</type>
</CustomField>