force-app/main/default/objects/Fulfillment__c/fields/OrderLine__c.field-meta.xml
<CustomField>
    <fullName>OrderLine__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Boom_Order_Product_Line__c, Boom_Order_Product_Line__r.Product__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line</label>
    <type>Text</type>
</CustomField>