force-app/main/default/objects/Fulfillment__c/fields/OrderProductLine__c.field-meta.xml
<CustomField>
    <fullName>OrderProductLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product Line</label>
    <referenceTo>kugo2p__SalesOrderProductLine__c</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>