force-app/main/default/objects/Fulfillment__c/fields/Past_Client_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Client_Approval_Date__c</fullName>
    <formula>IF( Client_Approval_Deadline_hidden__c  &lt;= Today(), true, IF( Client_Approval_Deadline_hidden__c  &gt; Today(), false, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Client Approval Date</label>
    <type>Checkbox</type>
</CustomField>