force-app/main/default/objects/Fulfillment__c/fields/Pause_Calls__c.field-meta.xml
<CustomField>
    <fullName>Pause_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is used by CSRs to temporarily pause outbound phone calls.</description>
    <inlineHelpText>This box is used by CSRs to temporarily pause outbound phone calls.</inlineHelpText>
    <label>Pause Calls</label>
    <type>Checkbox</type>
</CustomField>