force-app/main/default/objects/Fulfillment__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <formula>Boom_Order__r.PaymentStatus2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment status</label>
    <type>Text</type>
</CustomField>