force-app/main/default/objects/Fulfillment__c/fields/Plaque_Color__c.field-meta.xml
<CustomField>
    <fullName>Plaque_Color__c</fullName>
    <formula>text(OrderProductLine__r.Plaque_Color__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaque Color RETIRED</label>
    <type>Text</type>
</CustomField>