force-app/main/default/objects/Fulfillment__c/fields/Postcard_Type__c.field-meta.xml
<CustomField>
    <fullName>Postcard_Type__c</fullName>
    <description>TEXT(OrderProductLine__r.Plaque_Type__c)</description>
    <formula>TEXT(Boom_Order_Product_Line__r.Plaque_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcard Type</label>
    <type>Text</type>
</CustomField>