force-app/main/default/objects/Fulfillment__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <description>Updated by webapp, indicates when posting should be uploaded</description>
    <inlineHelpText>When posting should go live</inlineHelpText>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>