force-app/main/default/objects/Fulfillment__c/fields/Primary_AM__c.field-meta.xml
<CustomField>
    <fullName>Primary_AM__c</fullName>
    <description>OrderNumber__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.Alias</description>
    <formula>Boom_Order__r.Opportunity__r.FSP_Sales_Rep__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OrderNumber__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.Alias</inlineHelpText>
    <label>Primary AM</label>
    <type>Text</type>
</CustomField>