force-app/main/default/objects/Fulfillment__c/fields/Primary_service__c.field-meta.xml
<CustomField>
    <fullName>Primary_service__c</fullName>
    <formula>TEXT(PrimaryRecipient__r.ACDF_Primary_Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary service</label>
    <type>Text</type>
</CustomField>