force-app/main/default/objects/Fulfillment__c/fields/Product_Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Product_Award_Year__c</fullName>
    <description>TEXT(OrderProductLine__r.Award_Year__c)</description>
    <formula>TEXT(Boom_Order_Product_Line__r.Award_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Award Year</label>
    <type>Text</type>
</CustomField>