force-app/main/default/objects/Fulfillment__c/fields/Product_Display_Name_OR_Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Name_OR_Product_name__c</fullName>
    <description>Product Display Name OR Product name if no display name exists</description>
    <formula>BLANKVALUE(Boom_Order_Product_Line__r.Product__r.Product_Display_Name__c,Boom_Order_Product_Line__r.Product__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Display Name/Product Name</label>
    <type>Text</type>
</CustomField>