force-app/main/default/objects/Fulfillment__c/fields/Product_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Engagement_Status__c</fullName>
    <description>Field to track the status/health of a marketing service or product</description>
    <inlineHelpText>Status for tracking the health of a marketing service product</inlineHelpText>
    <label>Subscription Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#33FF33</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <isActive>false</isActive>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Not Active</fullName>
                <isActive>false</isActive>
                <label>Not Active</label>
            </value>
            <value>
                <fullName>Passive</fullName>
                <isActive>false</isActive>
                <label>Passive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>