force-app/main/default/objects/Fulfillment__c/fields/Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Product_Style__c</fullName>
    <description>The client&apos;s selection of product style (e.g. &quot;Seasonal postcard&quot; or &quot;Standard/Professional&quot; testimonial survey etc.</description>
    <inlineHelpText>The client&apos;s selection of product style (e.g. &quot;Seasonal postcard&quot; or &quot;Standard/Professional&quot; testimonial survey or &quot;Not recipes&quot; for social media.</inlineHelpText>
    <label>Product Style</label>
    <length>250</length>
    <type>Text</type>
</CustomField>