force-app/main/default/objects/Fulfillment__c/fields/Product_Voided__c.field-meta.xml
<CustomField>
    <fullName>Product_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Voided</label>
    <type>Checkbox</type>
</CustomField>