force-app/main/default/objects/Fulfillment__c/fields/Proof_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_Delivery_Date__c</fullName>
    <label>Proof Delivery Date</label>
    <type>Date</type>
</CustomField>