force-app/main/default/objects/Fulfillment__c/fields/Proof_Location__c.field-meta.xml
<CustomField>
    <fullName>Proof_Location__c</fullName>
    <inlineHelpText>Preloaded with &quot;http://fivestarprofessional.com/Content/Images/&quot;
Enter the YEAR/MARKETCODE/CLIENTFOLDER/FILENAME (Ex: 2020/MSPWM20/MarcusWaterbury/MSPWM20_MarcusRaymondWaterbury_DWP_P1.pdf)</inlineHelpText>
    <label>Proof Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>