force-app/main/default/objects/Fulfillment__c/fields/Proof_Notes_for_Client__c.field-meta.xml
<CustomField>
    <fullName>Proof_Notes_for_Client__c</fullName>
    <label>Proof Notes for Client</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>