force-app/main/default/objects/Fulfillment__c/fields/Provide_Link_for_Traffic_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Provide_Link_for_Traffic_to_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E reprint checklist field</description>
    <inlineHelpText>Provide electronic link for traffic to send to client.</inlineHelpText>
    <label>Provide Link for Traffic to Send</label>
    <type>Checkbox</type>
</CustomField>