force-app/main/default/objects/Fulfillment__c/fields/Published_Name__c.field-meta.xml
<CustomField>
    <fullName>Published_Name__c</fullName>
    <description>Published name from contact</description>
    <formula>PrimaryRecipient__r.Published_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Published name from contact</inlineHelpText>
    <label>Published Name</label>
    <type>Text</type>
</CustomField>