force-app/main/default/objects/Fulfillment__c/fields/Ready_to_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Ship_Date__c</fullName>
    <inlineHelpText>Date Order was Ready for Shipping</inlineHelpText>
    <label>Ready to Ship Date</label>
    <type>Date</type>
</CustomField>