force-app/main/default/objects/Fulfillment__c/fields/Reason_for_not_providing_a_list__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_providing_a_list__c</fullName>
    <label>Reason for not providing a list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client does not have a list</fullName>
            </value>
            <value>
                <fullName>Client is not comfortable sharing data</fullName>
            </value>
            <value>
                <fullName>Client does not know how to share the contacts they have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>