force-app/main/default/objects/Fulfillment__c/fields/Related_Client_Experience__c.field-meta.xml
<CustomField>
    <fullName>Related_Client_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Client Experience</label>
    <referenceTo>Client_Experience__c</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>