force-app/main/default/objects/Fulfillment__c/fields/Related_Core_Market__c.field-meta.xml
<CustomField>
    <fullName>Related_Core_Market__c</fullName>
    <formula>PrimaryRecipient__r.Market_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Core Market</label>
    <type>Text</type>
</CustomField>