force-app/main/default/objects/Fulfillment__c/fields/Reprint_Link__c.field-meta.xml
<CustomField>
    <fullName>Reprint_Link__c</fullName>
    <label>Reprint Link</label>
    <type>Url</type>
</CustomField>