force-app/main/default/objects/Fulfillment__c/fields/Revised_Proof_Sent_Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>Revised_Proof_Sent_Awaiting_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revised Proof Sent - Awaiting Approval</label>
    <type>Checkbox</type>
</CustomField>