force-app/main/default/objects/Fulfillment__c/fields/Rush__c.field-meta.xml
<CustomField>
    <fullName>Rush__c</fullName>
    <description>OrderProductLine__r.Rush__c</description>
    <formula>Boom_Order_Product_Line__r.Rush__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rush</label>
    <type>Checkbox</type>
</CustomField>