force-app/main/default/objects/Fulfillment__c/fields/Seen_in__c.field-meta.xml
<CustomField>
    <fullName>Seen_in__c</fullName>
    <description>Field to show which publications this client has a listing in - created for EH and a la carte markets</description>
    <formula>PrimaryRecipient__r.Seen_in__c</formula>
    <inlineHelpText>Field to show which publications this client is listed in</inlineHelpText>
    <label>Seen in</label>
    <type>Text</type>
</CustomField>