force-app/main/default/objects/Fulfillment__c/fields/Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Service_Tier__c</fullName>
    <label>Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>